# libtruerandom

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  libtruerandom.pc.in
.github/workflows/: build-and-test.yml  release.yml
.specify/memory/: constitution.md
docs/: SPECIFICATION.md
include/truerandom/: truerandom.h
specs/001-libtruerandom-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-libtruerandom-core/checklists/: requirements.md
specs/001-libtruerandom-core/contracts/: public-api.md
src/: core.c  darwin.c  linux.c  posix_fallback.c  sources.h  urandom.c  windows.c
tests/: CMakeLists.txt
tests/integration/: test_tr_bytes.c  test_tr_errors.c  test_tr_integers.c
tests/unit/: test_tr_bytes.c  test_tr_errors.c  test_tr_integers.c
